.nx/cache/terminalOutputs/11958222472097297144
[2m> [22mnext dev

[32m✔[0m [33mConsole Ninja[0m extension is connected to [33mNext.js[0m, see [36mhttps://tinyurl.com/2vt8jxzw[0m
  [1m[38;2;173;127;168m ▲ Next.js 14.0.4[39m[22m
   - Local:        http://localhost:3000

[2K[1G[33mwarning[39m ../../package.json: No license field
 [32m[1m✓[22m[39m Ready in 5.8s
 [37m[1m○[22m[39m Compiling / ...
The user aborted a request.

Retrying 1/3...

[1m[33mwarn[39m[22m - The RTL features in Tailwind CSS are currently in preview.
[1m[33mwarn[39m[22m - Preview features are not covered by semver, and may be improved in breaking ways at any time.
 [32m[1m✓[22m[39m Compiled / in 31s (5422 modules)
Image with src "/images/landing-photo.avif" has legacy prop "layout". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
Image with src "/images/landing-photo.avif" has legacy prop "objectFit". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
Image with src "/images/landing-photo.avif" has legacy prop "objectPosition". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
 [32m[1m✓[22m[39m Compiled in 2.2s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1869ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1528ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1900ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 10.8s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1655ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 973ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 5.5s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 3.1s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1770ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1868ms (5422 modules)
 [31m[1m⨯[22m[39m upstream image response failed for /images/landing-photo.avif ResponseAborted
[90m    at Object.fetch (node:internal/deps/undici/undici:11372:11)[39m
    at async globalThis.fetch (webpack-internal:///(rsc)/../../node_modules/[4mnext[24m/dist/server/lib/patch-fetch.js:193:16)
    at async invokeRequest (/Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/lib/server-ipc/invoke-request.js:17:12)
    at async /Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/next-server.js:596:35
    at async imageOptimizer (/Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/image-optimizer.js:576:13)
    at async cacheEntry.imageResponseCache.get.incrementalCache (/Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/next-server.js:176:65)
    at async /Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/response-cache/index.js:90:36
    at async /Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/lib/batcher.js:41:32
ImageError: "url" parameter is valid but upstream response is invalid
    at imageOptimizer (/Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/image-optimizer.js:588:19)
    at async cacheEntry.imageResponseCache.get.incrementalCache (/Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/next-server.js:176:65)
    at async /Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/server/response-cache/index.js:90:36
    at async /Users/j.bosque/Desktop/decazen-system/node_modules/[4mnext[24m/dist/lib/batcher.js:41:32 {
  statusCode: [33m500[39m
}
 [32m[1m✓[22m[39m Compiled in 1415ms (2721 modules)
Image with src "/images/landing-photo.avif" has legacy prop "layout". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
Image with src "/images/landing-photo.avif" has legacy prop "objectFit". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
Image with src "/images/landing-photo.avif" has legacy prop "objectPosition". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
 [32m[1m✓[22m[39m Compiled in 1535ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1301ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1662ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1508ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1377ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1905ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1614ms (5422 modules)
 [32m[1m✓[22m[39m Compiled in 1224ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1410ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 2.3s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1452ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 2.1s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1260ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 1130ms (2721 modules)
 [32m[1m✓[22m[39m Compiled in 2.6s (2721 modules)
 [32m[1m✓[22m[39m Compiled in 2.5s (2721 modules)
Image with src "/images/landing-photo.avif" has legacy prop "layout". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
Image with src "/images/landing-photo.avif" has legacy prop "objectFit". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
Image with src "/images/landing-photo.avif" has legacy prop "objectPosition". Did you forget to run the codemod?
Read more: https://nextjs.org/docs/messages/next-image-upgrade-to-13
 [32m[1m✓[22m[39m Compiled in 2.1s (2721 modules)
 [31m[1m⨯[22m[39m ./src/styles/globals.css.webpack[javascript/auto]!=!../../node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[11].oneOf[12].use[2]!../../node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[11].oneOf[12].use[3]!./src/styles/globals.css
SyntaxError: Unexpected token (41:4)
Import trace for requested module:
./src/styles/globals.css.webpack[javascript/auto]!=!../../node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[11].oneOf[12].use[2]!../../node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[11].oneOf[12].use[3]!./src/styles/globals.css
./src/styles/globals.css
^C[?25h
